--- a/PopMS.DataAccess/PopMS.DataAccess.csproj
+++ b/PopMS.DataAccess/PopMS.DataAccess.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200724094412_up202007241743.cs" />
     <Compile Remove="Migrations\20200724094412_up202007241743.Designer.cs" />
+    <Compile Remove="Migrations\20200727072144_up202007271521.cs" />
+    <Compile Remove="Migrations\20200727072144_up202007271521.Designer.cs" />
+    <Compile Remove="Migrations\20200727092210_up202007271721.cs" />
+    <Compile Remove="Migrations\20200727092210_up202007271721.Designer.cs" />
   </ItemGroup>
 
 
