--- a/PopMS/appsettings.json
+++ b/PopMS/appsettings.json
@@ -103,7 +103,9 @@
     }
   },
   "AppSettings": {
-    "key1":"value1",
-    "key2":"value2"
+    "VedioPath": "{0}\\wwwroot\\files\\物料管理系统视频.mp4",
+    "SOPPath": "{0}\\wwwroot\\files\\操作流程手册.rar",
+    //MIME类型
+    "MIME": ""
   }
 }
