--- a/PopMS/appsettings.json
+++ b/PopMS/appsettings.json
@@ -32,7 +32,7 @@
   "DBType": "SqlServer", //DataBase, you can choose mysql,sqlserver,pgsql,sqlite,oracle
   "IsOldSqlServer":  false,//If you are using .netcore 2.x, setting this to true will support sql server 2008
   "CookiePre": "PopMS", //cookie prefix
-  "IsQuickDebug": true, //is debug mode
+  "IsQuickDebug": false, //is debug mode
   "CorsOptions": {
     "EnableAll": true,
     "Policy": [
